# crewAI-boilerplate

./: .gitignore  README.md  blog_post.md  new-logs.txt  pyproject.toml
src/crew_ai/: crew.py  main.py
src/crew_ai/config/: agents.yaml  tasks.yaml
src/crew_ai/tools/: api_fetch.py  custom_tool.py  summarizer_tool.py
